# ragit

./: .env.example  .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
app/: main.py
app/api/routers/: agent_chat_router.py  agent_crud_router.py  file_router.py
app/core/: config.py  utils.py
app/db/: __init__.py
app/schemas/: __init__.py  agent_schemas.py  chat_schemas.py
app/services/: __init__.py  agent_service.py  embedding_service.py  file_service.py  file_validation_service.py  generation_service.py  ingestion_orchestrator.py  ranking_service.py  retrieval_service.py  text_processing_service.py  vector_db_service.py
app/ui/: chat_app.py
data/: seed_data.json
data/seed_uploads/: langchain_com_pages_4.csv
prisma/: schema.prisma
prisma/migrations/20250518185038_initial_setup/: migration.sql
scripts/: rag_scraper.py  seed.py
tests/api/: test_agent_chat_router.py  test_agent_router.py  test_file_router.py
tests/services/: test_generation_service.py  test_ingestion_service.py  test_retrieval_service.py
