[project]
name = "ragit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=0.6.3",
    "fastapi[all]>=0.115.12",
    "flagembedding>=1.3.4",
    "httpx>=0.28.1",
    "llama-index>=0.12.36",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "prisma==0.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-multipart>=0.0.20",
    "ragas>=0.2.15",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "ruff>=0.11.10",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "streamlit-extras",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
]
